# barbican

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  .zuul.yaml  Authors  HACKING.rst  MANIFEST.in  README.md  README.rst  apiary.apib  bandit.yaml  barbican.py  barbican_api.py  barbican_api_test.py  barbican_tests.py  bindep.txt  concourse_unit_test_task  config.py  custom-requirements.txt  database.py  lower-constraints.txt  models.py  openstack-common.conf  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tests-py3-blacklist.txt  tox.ini  uwsgi.ini  wahfile1
.github/: renovate.json
api-guide/source/: acls.rst  cas.rst  certificates.rst  conf.py  consumers.rst  containers.rst  dogtag_setup.rst  index.rst  orders.rst  quotas.rst  secret_metadata.rst  secrets.rst
api-ref/source/: conf.py  index.rst
barbican/: __init__.py  config.py  context.py  i18n.py  version.py
barbican/api/: __init__.py  app.py  app.wsgi  hooks.py  policy.py  resources.py  validators.py
barbican/cmd/: __init__.py  barbican_manage.py  db_manage.py  hsm_partition_create.py  kek_rewrap.py  keystone_listener.py  pkcs11_kek_rewrap.py  pkcs11_key_generation.py  pkcs11_migrate_kek_signatures.py  retry_scheduler.py  simple_crypto.py  simple_crypto_kek_rewrap.py  simple_crypto_pkek.py  status.py  worker.py
barbican/common/: __init__.py  accept.py  config.py  exception.py  hrefs.py  policy.py  quota.py  resources.py  utils.py  validators.py  verifications.py  wsgi.py
barbican/crypto/: __init__.py  dogtag_crypto.py  extension_manager.py  fields.py  mime_types.py  p11_crypto.py  p11plugin.py  plugin.py
barbican/data/: __init__.py  tenant.py
barbican/functionaltests/: post_test_hook.sh
barbican/hacking/: checks.py
barbican/locale/: barbican-log-critical.pot  barbican-log-error.pot  barbican-log-info.pot  barbican-log-warning.pot  barbican.pot  keep.pot
barbican/model/: __init__.py  base.py  clean.py  models.py  repositories.py  secret.py  sync.py  tenant.py  util.py
barbican/objects/: __init__.py  base.py  container.py  container_acl.py  container_acl_user.py  container_consumer_meta.py  container_secret.py  encrypted_datum.py  fields.py  kekdatum.py  order.py  order_barbican_metadatum.py  order_plugin_metadatum.py  order_retry_task.py  project.py  project_quotas.py  project_secret_store.py  secret.py  secret_acl.py  secret_acl_user.py  secret_consumer_metadatum.py  secret_store_metadatum.py  secret_stores.py  secret_user_metadatum.py  transport_key.py
barbican/plugin/: castellan_secret_store.py  dogtag.py  dogtag_config_opts.py  kmip.py  kmip_secret_store.py  resources.py  simple_certificate_manager.py  snakeoil_ca.py  store_crypto.py  symantec.py  vault_secret_store.py
barbican/queue/: __init__.py  client.py  keystone_listener.py  resources.py  retry_scheduler.py  server.py  simple.py
barbican/samples/: sample.py
barbican/store/: __init__.py  secret_store.py
barbican/tasks/: __init__.py  certificate_resources.py  common.py  keystone_consumer.py  resources.py
barbican/tests/: __init__.py  certificate_utils.py  config_test.py  database_utils.py  fixture.py  keys.py  test_hacking.py  test_middleware_auth.py  utils.py
barbican/worker/: __init__.py  resources.py  simple.py
barbican/wsgi/: api.py
contrib/devstack/: local.conf
contrib/dogtag/: install_dogtag.sh
debian/: barbican-api.dirs  barbican-api.init  barbican-api.install  barbican-api.logrotate  barbican-api.postinst  barbican-api.prerm  barbican-api.upstart  barbican-common.dirs  barbican-common.postinst  barbican-common.postrm  barbican-keystone-listener.upstart  barbican-worker.upstart  changelog  changelog-orig  control  copyright  gbp.conf  rules  watch_tbd
devstack/: README.md  gate_hook.sh  local.conf.example  plugin.sh  settings
devstack/barbican-vagrant/: Vagrantfile  install_devstack.sh
devstack/lib/: barbican  tempest
devstack/upgrade/: resources.sh  settings  shutdown.sh  upgrade.sh
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  plugin.rst  sample_config.rst  sample_policy.rst  setup.rst  testing.rst
docs/: includewars.xml  olink.xml  pom.xml
etc/: barbican-api-paste.ini  barbican-api.conf  dev_tempest.conf
etc/barbican/: README.barbican.conf.txt  api_audit_map.conf  barbican-admin-paste.ini  barbican-api-paste.ini  barbican-api.conf  barbican-api.ini  barbican-functional.conf  barbican.conf  config.py  policy.json
etc/init/: barbican-api.conf  barbican-keystone-listener.conf  barbican-worker.conf  barbican.conf
etc/logrotate.d/: barbican-api
etc/oslo-config-generator/: barbican.conf  policy.conf
examples/: agent-pair.json  agent.json  log-event.json  policy.json
functionaltests/: .coveragerc  .testr.conf  __init__.py  post_test_hook.sh  pre_test_hook.sh  pretty_tox.sh  run_tests.sh  run_tests_parallel.sh
functionaltests/api/: base.py  test_versions.py
functionaltests/common/: __init__.py  auth.py  client.py  config.py
install-guide/source/: barbican-backend.rst  common_configure.rst  common_prerequisites.rst  conf.py  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
releasenotes/notes/: add-barbican-manage-check-subcommands-38835078f5cc0ce2.yaml  add-configurable-mechanism-options-2e5c57099b4c91b1.yaml  add-id-property-b7c1d3d102c0293b.yaml  add-new-pkcs11-options-fc7bb625998e91fc.yaml  add-os-locking-ok-option-d0cfc5883355632a.yaml  add-simple-crypto-new-pkek-95b5d970cd85a6dd.yaml  add-simple-crypto-secret-rewrap-48651f4c5440529e.yaml  allow-aes-xts-512-bitlength-in-simple-crypto-95936a2d830035cc.yaml  allow-multiple-pkcs11-token-labels-61b63e34b7c8cc1a.yaml  barbican-manage-d469b4d15454f981.yaml  gmr-9811bbc294bb5535.yaml  (+59 more)
rpmbuild/: automated_rpm_build.exp  build_rpm.sh  package_dependencies.sh  upload_rpm.sh
templates/: agents.html  events.html  index.html  layout.html  login.html  users.html
tools/: hacking.sh  install_venv.py  install_venv_common.py  pip-requires  test-requires
(+468 files in other folders)
