[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[project]
name = "barbican"
description = "OpenStack Secure Key Management"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.entry-points."barbican.secretstore.plugin"]
store_crypto = "barbican.plugin.store_crypto:StoreCryptoAdapterPlugin"
dogtag_crypto = "barbican.plugin.dogtag:DogtagKRAPlugin"
kmip_plugin = "barbican.plugin.kmip_secret_store:KMIPSecretStore"
vault_plugin = "barbican.plugin.vault_secret_store:VaultSecretStore"

[project.entry-points."barbican.crypto.plugin"]
p11_crypto = "barbican.plugin.crypto.p11_crypto:P11CryptoPlugin"
simple_crypto = "barbican.plugin.crypto.simple_crypto:SimpleCryptoPlugin"

[project.entry-points."barbican.test.crypto.plugin"]
test_crypto = "barbican.tests.crypto.test_plugin:TestCryptoPlugin"

[project.entry-points."oslo.config.opts"]
"barbican.common.config" = "barbican.common.config:list_opts"
"barbican.plugin.secret_store" = "barbican.plugin.interface.secret_store:list_opts"
"barbican.plugin.crypto" = "barbican.plugin.crypto.manager:list_opts"
"barbican.plugin.crypto.simple" = "barbican.plugin.crypto.simple_crypto:list_opts"
"barbican.plugin.dogtag" = "barbican.plugin.dogtag_config_opts:list_opts"
"barbican.plugin.crypto.p11" = "barbican.plugin.crypto.p11_crypto:list_opts"
"barbican.plugin.secret_store.kmip" = "barbican.plugin.kmip_secret_store:list_opts"
"barbican.plugin.secret_store.vault" = "barbican.plugin.vault_secret_store:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
"barbican.common.config" = "barbican.common.config:set_lib_defaults"

[project.entry-points."oslo.policy.enforcer"]
barbican = "barbican.common.policy:get_enforcer"

[project.entry-points."oslo.policy.policies"]
barbican = "barbican.common.policies:list_rules"

[project.optional-dependencies]
dogtag = [
    "dogtag-pki>=10.3.5.1", # LGPLv3+
]
kmip = [
    "pykmip>=0.7.0", # Apache-2.0
]

[project.scripts]
barbican-manage = "barbican.cmd.barbican_manage:main"
barbican-db-manage = "barbican.cmd.db_manage:main"
barbican-keystone-listener = "barbican.cmd.keystone_listener:main"
barbican-worker = "barbican.cmd.worker:main"
pkcs11-kek-rewrap = "barbican.cmd.pkcs11_kek_rewrap:main"
pkcs11-key-generation = "barbican.cmd.pkcs11_key_generation:main"
barbican-retry = "barbican.cmd.retry_scheduler:main"
barbican-status = "barbican.cmd.status:main"

[tool.setuptools.data-files]
"etc/barbican" = [
    "etc/barbican/barbican-api-paste.ini",
]
