[metadata]
name = barbican
version = 2015.1
description = Service for storing sensitive client information for OpenStack
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    barbican
scripts =
    bin/barbican.sh
    bin/barbican-worker.py
    bin/barbican-keystone-listener.py
    bin/barbican-db-manage.py

[entry_points]
barbican.secretstore.plugin =
    store_crypto = barbican.plugin.store_crypto:StoreCryptoAdapterPlugin
    dogtag_crypto = barbican.plugin.dogtag:DogtagKRAPlugin
barbican.crypto.plugin =
    p11_crypto = barbican.plugin.crypto.p11_crypto:P11CryptoPlugin
    simple_crypto = barbican.plugin.crypto.simple_crypto:SimpleCryptoPlugin
barbican.certificate.plugin =
    simple_certificate = barbican.plugin.simple_certificate_manager:SimpleCertificatePlugin
    symantec = barbican.plugin.symantec:SymantecCertificatePlugin
    dogtag = barbican.plugin.dogtag:DogtagCAPlugin
barbican.certificate.event.plugin =
    simple_certificate_event = barbican.plugin.simple_certificate_manager:SimpleCertificateEventPlugin
barbican.test.crypto.plugin =
    test_crypto = barbican.tests.crypto.test_plugin:TestCryptoPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = barbican/locale
domain = barbican

[update_catalog]
domain = barbican
output_dir = barbican/locale
input_file = barbican/locale/barbican.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = barbican/locale/barbican.pot

# TBD: OpenStack stuff...
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
#verbosity=2
#detailed-errors=1
#with-openstack=1
#openstack-red=0.05
#openstack-yellow=0.025
#openstack-show-elapsed=1
#openstack-color=1

#[install]
#install-lib=/usr/local/bin/vbarbican/lib/python2.7/site-packages/

[wheel]
universal = 1
