[metadata]
name = barbican
summary = OpenStack Secure Key Management
description = Service for storing sensitive client information for OpenStack
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/barbican/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
data_files =
    etc/barbican =
        etc/barbican/barbican-api-paste.ini
packages =
    barbican

[extras]
dogtag =
  dogtag-pki>=10.3.5.1 # LGPLv3+

[entry_points]
oslo.policy.enforcer =
    barbican = barbican.common.policy:get_enforcer

oslo.policy.policies =
    barbican = barbican.common.policies:list_rules

console_scripts =
    barbican-manage = barbican.cmd.barbican_manage:main
    barbican-db-manage = barbican.cmd.db_manage:main
    barbican-keystone-listener = barbican.cmd.keystone_listener:main
    barbican-worker = barbican.cmd.worker:main
    pkcs11-kek-rewrap = barbican.cmd.pkcs11_kek_rewrap:main
    pkcs11-key-generation = barbican.cmd.pkcs11_key_generation:main
    barbican-retry = barbican.cmd.retry_scheduler:main
    barbican-status = barbican.cmd.status:main

wsgi_scripts =
    barbican-wsgi-api = barbican.api.app:get_api_wsgi_script

barbican.secretstore.plugin =
    store_crypto = barbican.plugin.store_crypto:StoreCryptoAdapterPlugin
    dogtag_crypto = barbican.plugin.dogtag:DogtagKRAPlugin
    kmip_plugin = barbican.plugin.kmip_secret_store:KMIPSecretStore
    vault_plugin = barbican.plugin.vault_secret_store:VaultSecretStore
barbican.crypto.plugin =
    p11_crypto = barbican.plugin.crypto.p11_crypto:P11CryptoPlugin
    simple_crypto = barbican.plugin.crypto.simple_crypto:SimpleCryptoPlugin
barbican.certificate.plugin =
    simple_certificate = barbican.plugin.simple_certificate_manager:SimpleCertificatePlugin
    snakeoil_ca = barbican.plugin.snakeoil_ca:SnakeoilCACertificatePlugin
    symantec = barbican.plugin.symantec:SymantecCertificatePlugin
    dogtag = barbican.plugin.dogtag:DogtagCAPlugin
barbican.certificate.event.plugin =
    simple_certificate_event = barbican.plugin.simple_certificate_manager:SimpleCertificateEventPlugin
barbican.test.crypto.plugin =
    test_crypto = barbican.tests.crypto.test_plugin:TestCryptoPlugin
oslo.config.opts =
    barbican.common.config = barbican.common.config:list_opts
    barbican.plugin.secret_store = barbican.plugin.interface.secret_store:list_opts
    barbican.plugin.crypto = barbican.plugin.crypto.manager:list_opts
    barbican.plugin.crypto.simple = barbican.plugin.crypto.simple_crypto:list_opts
    barbican.plugin.dogtag = barbican.plugin.dogtag_config_opts:list_opts
    barbican.plugin.crypto.p11 = barbican.plugin.crypto.p11_crypto:list_opts
    barbican.plugin.secret_store.kmip = barbican.plugin.kmip_secret_store:list_opts
    barbican.plugin.secret_store.vault = barbican.plugin.vault_secret_store:list_opts
    barbican.certificate.plugin = barbican.plugin.interface.certificate_manager:list_opts
    barbican.certificate.plugin.snakeoil = barbican.plugin.snakeoil_ca:list_opts
oslo.config.opts.defaults =
    barbican.common.config = barbican.common.config:set_lib_defaults

# TBD: OpenStack stuff...
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage https://pypi.org/project/coverage
#                tissue https://pypi.org/project/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
#verbosity=2
#detailed-errors=1
#with-openstack=1
#openstack-red=0.05
#openstack-yellow=0.025
#openstack-show-elapsed=1
#openstack-color=1

#[install]
#install-lib=/usr/local/bin/vbarbican/lib/python2.7/site-packages/
